# rag-evaluation-monitoring-system

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  README.md  SESSION_RESUME.md  architecture_evaluation_rag.md  pyproject.toml  test_interactions.json
scripts/: simulate_evaluation.py  weekly_evaluation.sh
src/rems/: __init__.py  cli.py  config.py  logging_config.py  schemas.py
src/rems/collector/: __init__.py  api_collector.py
src/rems/core/: __init__.py  diagnostic.py  evaluator.py  metrics.py  recommendations.py  schemas.py
src/rems/diagnostic/: __init__.py  engine.py
src/rems/evaluators/: __init__.py  base.py  generator_evaluator.py  orchestrator.py  retrieval_evaluator.py
src/rems/models/: __init__.py  database.py  session.py
src/rems/recommendations/: __init__.py  engine.py
src/rems/reports/: __init__.py  generator.py
src/rems/reports/templates/: report.html
src/rems/web/: __init__.py  app.py
src/rems/web/pages/: __init__.py  dashboard.py  evaluate.py  history.py
